fix NPE in UrlResolutionTask